--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,9 @@ URL: https://github.com/markjrieke/workboots,
 BugReports: https://github.com/markjrieke/workboots/issues
 Imports:
     assertthat,
+    cli,
     dplyr,
+    future.apply,
     generics,
     lifecycle,
     Metrics,
@@ -33,7 +35,7 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
 Suggests: 
     forcats,
     ggplot2,
